dataset1235/2025-2/1379599236/users/24148356/executions/2277843042_3806002331.log
== RUN (2025-08-20 16:56:03)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2.86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50.00
x = c + o
ICMS = x*(34/100)
print (round(x + ICMS, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 10
    print (round(x + ICMS, 2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 10
    print (round(x + ICMS, 2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 10
    print (round(x + ICMS, 2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 10
    print (round(x + ICMS, 2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 10
    print (round(x + ICMS, 2)
          ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
File "XXXX", line 10
    print (round(x + ICMS, 2)
          ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:54:38)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2.86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50.00

ICMS = x*(34/100)

x = c + o 

Print (x + ICMS)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:50:10)
-- CODE: 
n = float(input("digite o litro: "))

o = 50,00

ICMS = x*(34/100)

x = n + o 

Print (x + ICMS)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:48:54)
-- CODE: 
n = input("digite o litro: ")
o = 50,00

ICMS = x*(34/100)

x = n + o 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    ICMS = x*(34/100)
           ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:55:33)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2.86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50.00
x = c + o
ICMS = x*(34/100)
print (x + ICMS)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
digite o litro: 979.9926519999999
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
digite o litro: 401.95176000000004
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
digite o litro: 258.62
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
digite o litro: 106.85696
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
digite o litro: 634.846708
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
digite o litro: 2499.99914
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:55:18)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2.86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50.00
x = c + o
ICMS = x*(34/100)
Print (x + ICMS)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Print (x + ICMS)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Print (x + ICMS)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Print (x + ICMS)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Print (x + ICMS)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Print (x + ICMS)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    Print (x + ICMS)
    ^^^^^
NameError: name 'Print' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:54:06)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2,86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50,00

ICMS = x*(34/100)

x = c + o 

Print (x + ICMS)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = n * L
        ~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = n * L
        ~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = n * L
        ~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = n * L
        ~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = n * L
        ~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = n * L
        ~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 16:56:18)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2.86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50.00
x = c + o
ICMS = x*(34/100)
print (round(x + ICMS, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
digite o litro: 979.99
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
digite o litro: 401.95
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
digite o litro: 258.62
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
digite o litro: 106.86
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
digite o litro: 634.85
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
digite o litro: 2500.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 16:56:08)
-- CODE: 
n = float(input("digite o litro: "))
#preço do litro
L = 2.86
#Custo do litro
c = n * L
#Preço da troca de oléo
o = 50.00
x = c + o
ICMS = x*(34/100)
print (round(x + ICMS, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
digite o litro: 979.99
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
digite o litro: 401.95
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
digite o litro: 258.62
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
digite o litro: 106.86
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
digite o litro: 634.85
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
digite o litro: 2500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
